--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     width: 200vw;
     height: 100vh;
     color: white;
-    background-color: rgb(0, 0, 0);
+    background-color: #150734;
 }
 
 body::-webkit-scrollbar {
@@ -24,7 +24,8 @@ body::-webkit-scrollbar {
     height: 10vh;
     text-align: center;
     font-size: 1vw;
-    letter-spacing: 3px;
+    letter-spacing: 1px;
+    word-spacing: 10px;
 }
 
 #pageContent {
@@ -36,6 +37,7 @@ body::-webkit-scrollbar {
     width: 200vw;
     height: 90vh;
     text-align: center;
+    color: black;
 }
 
 #part1, #part2, #part3, #part4, #part5, #part6 {
@@ -46,30 +48,31 @@ body::-webkit-scrollbar {
     box-shadow: 0 0 1px rgba(0, 0, 0, 0.05);
 }
 
-#part1 { background-color: rgb(50, 50, 50); }
-#part2 { background-color: rgb(60, 60, 60); }
-#part3 { background-color: rgb(70, 70, 70); }
-#part4 { background-color: rgb(80, 80, 80); }
-#part5 { background-color: rgb(90, 90, 90); }
-#part6 { background-color: rgb(100, 100, 100); }
+#part1 { background-color: #346dc4; }
+#part2 { background-color: #3882bb; }
+#part3 { background-color: #4B9FE1; }
+#part4 { background-color: #63BCE5; }
+#part5 { background-color: #7ED6EA; }
+#part6 { background-color: #bef3ff; }
 
 #part1H, #part2H, #part3H, #part4H, #part5H, #part6H {
     font-size: 2vw;
-    transition: 1s;
+    transition: 0s;
 }
 
 .list {
     text-align: center;
     list-style-position: inside;
-    margin: 0 3vw 0 0;
+    margin: 0 50px 0 0;
+    font-size: 20px;
 }
 
 #short1, #short2, #short3, #short4, #short5, #short6 {
     display: block;
-    transition: 3s;
+    transition: 0s;
 }
 
 #long1, #long2, #long3, #long4, #long5, #long6 {
     display: none;
-    transition: 3s;
+    transition: 0s;
 }
