--- a/style.css
+++ b/style.css
@@ -55,7 +55,12 @@ body::-webkit-scrollbar {
 #part5 { background-color: #7ED6EA; }
 #part6 { background-color: #bef3ff; }
 
-#part1H, #part2H, #part3H, #part4H, #part5H, #part6H {
+#part2H {
+    font-size: 1.75vw;
+    margin: 30px 0 26px 0;
+}
+
+#part1H, #part3H, #part4H, #part5H, #part6H {
     font-size: 2vw;
     transition: 0s;
 }
